--- a/ApiStub.FSharp.Stubbery/ApiStub.FSharp.Stubbery.fsproj
+++ b/ApiStub.FSharp.Stubbery/ApiStub.FSharp.Stubbery.fsproj
@@ -19,6 +19,7 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <EnablePackageValidation>true</EnablePackageValidation>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
