--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,4 +31,4 @@ jobs:
       # Main branch only
       if: github.ref == 'refs/heads/main'
       run: | 
-        dotnet nuget push *.nupkg
+        dotnet nuget push "*.nupkg"
