--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,8 +18,6 @@ jobs:
       with:
         dotnet-version: 6.0.x
         source-url: https://api.nuget.org/v3/index.json
-      env:
-        NUGET_AUTH_TOKEN: ${{secrets.NUGET_KEY}}
 
     - name: Restore dependencies
       run: dotnet restore
@@ -31,4 +29,4 @@ jobs:
       # Main branch only
       if: github.ref == 'refs/heads/main'
       run: | 
-        dotnet nuget push **/*.nupkg
+        dotnet nuget push **/*.nupkg --api-key ${{secrets.NUGET_KEY}}
