--- a/test/test.fsproj
+++ b/test/test.fsproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Stubbery" Version="2.7.1" />
     <PackageReference Include="SwaggerProvider" Version="1.0.0-beta5" />
     <PackageReference Include="xunit" Version="2.4.1" />
+    <PackageReference Include="Unquote" Version="6.1.0"/>
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
