added tool manifest for fantomas and fixed tests

--- a/test/ApiStub.FSharp.Tests.fsproj
+++ b/test/ApiStub.FSharp.Tests.fsproj
@@ -5,7 +5,7 @@
     <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Tests.fs" />
+    <Compile Include="CETests.fs" />
     <Compile Include="StubberyTests.fs" />
     <Content Include="swagger.json" />
     <Compile Include="Program.fs" />
