--- a/ApiStub.FSharp.Stubbery/ApiStub.FSharp.Stubbery.fsproj
+++ b/ApiStub.FSharp.Stubbery/ApiStub.FSharp.Stubbery.fsproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageId>ApiStub.FSharp.Stubbery</PackageId>
-    <Version>1.0.0-rc.9</Version>
+    <Version>1.0.0</Version>
     <Authors>jkone27</Authors>
     <RequireLicenseAcceptance>false</RequireLicenseAcceptance>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
