Add test for no mocks declared exception
* Add a check for `PrimaryHandler` being null in the `MockClientHandler` class.
* Throw a new exception with the message "no mocks were provided" if `PrimaryHandler` is null.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/jkone27/fsharp-integration-tests?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/test/ApiStub.FSharp.Tests.fsproj
+++ b/test/ApiStub.FSharp.Tests.fsproj
@@ -9,6 +9,7 @@
     <Compile Include="BDDTests.fs" />
     <Compile Include="BuilderExtensionsTests.fs" />
     <Compile Include="StubberyTests.fs" />
+    <Compile Include="Issues.fs" />
     <Content Include="swagger.json" />
   </ItemGroup>
   <ItemGroup>
