add docs and website publication

--- a/test/ApiStub.FSharp.Tests.fsproj
+++ b/test/ApiStub.FSharp.Tests.fsproj
@@ -3,6 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <GenerateProgramFile>true</GenerateProgramFile>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="CETests.fs" />
