--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -29,7 +29,7 @@ jobs:
         run: dotnet build -c Release ApiStub.FSharp.sln
       # Generate the documentation files
       - name: Generate the documentation'
-        run: dotnet fsdocs build --properties Configuration=Release
+        run: dotnet fsdocs build --properties Configuration=Release --root `https://raw.githubusercontent.com/jkone27/fsharp-integration-tests/refs/heads/main` 
       # Upload the static files
       - name: Upload documentation
         uses: actions/upload-pages-artifact@v3
