--- a/test/ApiStub.FSharp.Tests.fsproj
+++ b/test/ApiStub.FSharp.Tests.fsproj
@@ -9,16 +9,14 @@
     <Compile Include="CETests.fs" />
     <Compile Include="BDDTests.fs" />
     <Compile Include="BuilderExtensionsTests.fs" />
-    <Compile Include="StubberyTests.fs" />
     <Content Include="swagger.json" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
-    <PackageReference Include="Stubbery" Version="2.7.1" />
     <PackageReference Include="SwaggerProvider" Version="1.0.0-beta5" />
     <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="Unquote" Version="6.1.0"/>
+    <PackageReference Include="Unquote" Version="6.1.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -30,7 +28,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\app.fsproj" />
-    <ProjectReference Include="..\ApiStub.FSharp.Stubbery\ApiStub.FSharp.Stubbery.fsproj" />
+    <ProjectReference Include="..\ApiStub.FSharp\ApiStub.FSharp.fsproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Update="FSharp.Core" Version="6.0.3" />
