--- a/test/ApiStub.FSharp.Tests.fsproj
+++ b/test/ApiStub.FSharp.Tests.fsproj
@@ -12,16 +12,16 @@
     <Content Include="swagger.json" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.3" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
-    <PackageReference Include="SwaggerProvider" Version="1.0.0-beta5" />
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="Unquote" Version="6.1.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.15" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageReference Include="SwaggerProvider" Version="2.2.3" />
+    <PackageReference Include="xunit" Version="2.9.3" />
+    <PackageReference Include="Unquote" Version="7.0.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="3.1.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="3.1.2">
+    <PackageReference Include="coverlet.collector" Version="6.0.4">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
