--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,9 +37,13 @@ jobs:
       if: steps.versionize.outcome != 'success'
       run: echo "Skipping publishing. No release required."
 
+    - name: Build
+      if: steps.versionize.outcome == 'success'
+      run: dotnet build ./ApiStub.FSharp --configuration Release
+
     - name: Pack
       if: steps.versionize.outcome == 'success'
-      run: dotnet pack ./ApiStub.FSharp --output ./nupkgs --include-source --configuration Release --include-symbols
+      run: dotnet pack ./ApiStub.FSharp --no-build --output ./nupkgs --include-source --configuration Release --include-symbols
 
     - name: Push Package
       if: steps.versionize.outcome == 'success'
